--- a/config/data.yaml
+++ b/config/data.yaml
@@ -1,13 +1,21 @@
-id:
-  "1"
+Mbcx_data:
+  - id: 4.0.2
 
 
-data1:
-  -
-    task_name: rr
-    task_status: 1
-    original_package_type: ""
-    package_version: ""
-    ad_channel: ""
-    page: 1
-    size: 10
+FBcx_data: [
+        {'task_name': 'Test_44', 'page': 1, 'size': 10},
+        {'task_name': 'Test_111', 'page': 1, 'size': 10},
+        {'task_name': 'Test_55', 'page': 1, 'size': 10}
+    ]
+
+addMBerr_data:
+  - package_type: officialza
+    package_url: '111'
+  - package_type: official
+    package_url: '222'
+
+
+person:
+  name: '上海-${random_name()}-测试'
+  age: '${age()}'
+  sex: '${sex()}'
