1.优化ADMAX token获取逻辑：由手动填写优化为通过接口判断，当接口提示token过期时自动执行UI代码获取token（UI相关代码后续再补全，），未过期便直接执行用例。（分包工具相关逻辑后续再添加）

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -3,11 +3,15 @@ test_url = https://test-advertising.yostar.net
 test_url_ssl = https://staging-advertising.yostar.net
 
 [mysql]
-MYSQL_HOST = rm-uf6kf5r2g781f0fg0mo.mysql.rds.aliyuncs.com
-MYSQL_PORT = 3306
-MYSQL_USER = admax_test
-MYSQL_PASSWORD = 4znK9SR0ymYW3UwG
+mysql_host = rm-uf6kf5r2g781f0fg0mo.mysql.rds.aliyuncs.com
+mysql_port = 3306
+mysql_user = admax_test
+mysql_password = 4znK9SR0ymYW3UwG
 
 [redis]
-REDIS_HOST = r-uf6xrv207own00ws6vpd.redis.rds.aliyuncs.com
-REDIS_PASSWORD = ASRYSf0o6mxMhiDP
+redis_host = r-uf6xrv207own00ws6vpd.redis.rds.aliyuncs.com
+redis_password = ASRYSf0o6mxMhiDP
+
+[auth]
+token = f11b556a0a15636392b54e395831bb5576874f76
+
