--- a/data/fb_data.yaml
+++ b/data/fb_data.yaml
@@ -173,6 +173,21 @@ delete_task:
   valid:
     task_id: 1031  # 任务ID
 
+  valid_list:
+    - task_id: 1073
+    - task_id: 1072
+    - task_id: 1071
+    - task_id: 1070
+    - task_id: 1069
+    - task_id: 1068
+    - task_id: 1067
+    - task_id: 1066
+    - task_id: 1065
+    - task_id: 1064
+    - task_id: 1063
+    - task_id: 1062
+    - task_id: 1061
+
   # 无效的测试数据
   invalid:
     - task_id: 0  # 无效的任务ID
